@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.1.1.1 2004/04/01 05:19:03 xtraeme Exp $
+$NetBSD: distinfo,v 1.2 2004/07/16 16:50:47 xtraeme Exp $
 
-SHA1 (thy-0.8.10.tar.gz) = 6d7ebb79eec26fa45c719dc0e7f6c8ce222ad920
-Size (thy-0.8.10.tar.gz) = 486014 bytes
+SHA1 (thy-0.9.3.tar.bz2) = 2af7561df6b0100f6009d1ce18099ee168084c60
+Size (thy-0.9.3.tar.bz2) = 277249 bytes
